--- a/index.html
+++ b/index.html
@@ -58,13 +58,24 @@
           const location = document.getElementById('location').value;
           const note = document.getElementById('note').value;
           const url = `${API_URL}?name=${encodeURIComponent(name)}&location=${encodeURIComponent(location)}&lat=${lat}&lng=${lng}&type=${type}&note=${encodeURIComponent(note)}`;
-          fetch(url).then(res => res.text()).then(txt => {
-            document.getElementById('status').textContent = txt;
-          }).catch(err => {
-            document.getElementById('status').textContent = "❌ 發送失敗：" + err;
-          });
-        },
-        err => {
+          fetch(url)
+            .then(res => {
+              console.log("✅ Fetch 成功，HTTP 狀態碼:", res.status);  // 200 表示 OK
+              if (!res.ok) {
+                throw new Error(`伺服器返回錯誤狀態碼: ${res.status}`);
+              }
+              return res.text();
+            })
+            .then(txt => {
+              console.log("📦 伺服器回應內容:", txt);
+              document.getElementById('status').textContent = txt;
+            })
+            .catch(err => {
+              console.error("❌ Fetch 發生錯誤:", err);
+              document.getElementById('status').textContent = "❌ 發送失敗：" + err;
+            });
+
+            err => {
           document.getElementById('status').textContent = "❌ 無法取得 GPS：" + err.message;
         }
       );
