--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
   <h1>GPS 打卡系統</h1>
   
-  <label>員工姓名: 
-    <select id="name"></select>
-  </label><br>
-  
   <label>專案: 
     <select id="project"></select>
+  </label><br>
+  
+  <label>員工姓名: 
+    <select id="name"></select>
   </label><br>
   
   <button onclick="checkIn()">簽到</button>
@@ -21,39 +21,33 @@
   <div id="result"></div>
 
   <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbxO8ATafbbEnN-cDHd59gL4iufS-LkB_QuIKU_ZzYAWbY9tFGUB0L5Ib7koaI1oy0KS/exec";
+    const API_URL = "https://script.google.com/macros/s/DEPLOYMENT_ID/exec";
+    let ratesData = [];
 
-    // 初始化下拉選單
     document.addEventListener("DOMContentLoaded", loadProjects);
 
     function loadProjects() {
-      fetch(`${API_URL}?action=getProjects`)
+      fetch(`${API_URL}?action=getProjectAndStaff`)
         .then(res => res.json())
         .then(data => {
-          const staffSet = new Set();
-          const projectSet = new Set();
+          const projectSelect = document.getElementById("project");
+          const staffSelect = document.getElementById("name");
 
-          data.forEach(item => {
-            staffSet.add(item.staff);
-            projectSet.add(item.project);
+          data.projects.forEach(proj => {
+            const option = document.createElement("option");
+            option.value = proj;
+            option.textContent = proj;
+            projectSelect.appendChild(option);
           });
 
-          const staffSelect = document.getElementById("name");
-          const projectSelect = document.getElementById("project");
-
-          staffSet.forEach(staff => {
+          data.staff.forEach(staff => {
             const option = document.createElement("option");
             option.value = staff;
             option.textContent = staff;
             staffSelect.appendChild(option);
           });
 
-          projectSet.forEach(proj => {
-            const option = document.createElement("option");
-            option.value = proj;
-            option.textContent = proj;
-            projectSelect.appendChild(option);
-          });
+          ratesData = data.rates;
         });
     }
 
@@ -77,7 +71,6 @@
       const lat = pos.coords.latitude;
       const lng = pos.coords.longitude;
       const url = `${API_URL}?name=${encodeURIComponent(name)}&project=${encodeURIComponent(project)}&lat=${lat}&lng=${lng}&type=${type}`;
-
       fetch(url)
         .then(res => res.text())
         .then(msg => document.getElementById("result").innerText = msg);
@@ -85,4 +78,3 @@
   </script>
 </body>
 </html>
-
