--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GPS 打卡系統</title>
+  <meta name="viewport" content="width=device-width, initial-scale=2.0">
+  <title>打卡系統</title>
 </head>
 <body>
   <h1>GPS 打卡系統</h1>
