--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=2.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.5">
   <title>打卡系統</title>
 </head>
 <body>
-  <h1>GPS 打卡系統</h1>
+  <h1>打卡系統</h1>
   
   <label>專案: 
     <select id="project"></select>
