--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.5">
-  <title>打卡系統</title>
+  <title>Make A Change Homes • 打卡系統</title>
+  <style>
+    .title-container {
+      text-align: center;
+      font-weight: bold;
+      font-size: 2rem;
+      line-height: 1.4;
+    }
+    .subtitle {
+      display: block;
+      font-size: 1.2rem;
+      margin: 4px 0;
+    }
+  </style>
 </head>
 <body>
   <h1>打卡系統</h1>
