--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.5">
-  <title>Make A Change Homes • 打卡系統</title>
+  <title>打卡系統</title>
   <style>
     .title-container {
       text-align: center;
