--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <h1>Make A Change Homes • 打卡系統</h1>
+  <h1>Make A Change Homes/n打卡系統</h1>
   
   <label>專案: 
     <select id="project"></select>
