--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
   </style>
 </head>
 <body>
-  <h1>Make A Change Homes/n打卡系統</h1>
+   <div class="title-container">
+    Make A Change<br>
+    <span class="subtitle">打卡系統</span>
+    Homes
+  </div>
   
   <label>專案: 
     <select id="project"></select>
