--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.5">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>打卡系統</title>
   <style>
     .title-container {
@@ -20,9 +20,8 @@
 </head>
 <body>
    <div class="title-container">
-    Make A Change<br>
+    Make A Change Homes<br>
     <span class="subtitle">打卡系統</span>
-    Homes
   </div>
   
   <label>專案: 
