--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <style>
     label, button {
       display: inline-block;      /* 確保 transform 能正確作用 */
-      transform: scale(1.5);      /* 放大 1.5 倍 */
+      transform: scale(1.2);      /* 放大 1.2 倍 */
       transform-origin: left;     /* 放大時從左側開始，不會偏移 */
-      margin: 10px 0;
+      margin: 10px 10px;
     }
   </style>
   <label>專案: 
