--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 <style>
   label {
     display: block;       /* 每個 label 佔一行 */
-    margin-bottom: px;  /* label 和下面元素的間距 */
+    margin-bottom: 5px;  /* label 和下面元素的間距 */
     font-size: 1.2em;     /* 放大字體，可選 */
   }
 
   button {
     margin-right: 10px;   /* 按鈕之間的水平間距 */
-    margin-top: ８px;     /* 按鈕與上面元素（員工姓名）間距 */
+    margin-top: 5px;     /* 按鈕與上面元素（員工姓名）間距 */
     font-size: 1.2em;
-    padding: 0.5em 1em;
+    padding: 0.3em 0.3em;
   }
 </style>
   <label>專案: 
