--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
     margin-bottom: 3px;  /* label 和下面元素的間距 */
     font-size: 1.2em;     /* 放大字體，可選 */
   }
-
-  button {
-    margin-right: 10px;   /* 按鈕之間的水平間距 */
-    margin-top: 3px;     /* 按鈕與上面元素（員工姓名）間距 */
-    font-size: 1.2em;
-    padding: 0.2em 0.3em;
+button {
+  background-color: #ccc; /* 預設灰色 */
+  color: black;           /* 文字顏色 */
+  border: none;
+  padding: 0.5em 1em;
+  cursor: pointer;
+}
+button:active {
+  background-color: white; /* 按下時變白色 */
+}ing: 0.2em 0.3em;
   }
 </style>
   <label>專案: 
